<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/chalkboard"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CricketActivity" >
	
    <LinearLayout 
    	android:orientation="horizontal"
    	android:layout_width="match_parent"   
    	android:layout_height="0dp" 
        android:layout_weight="1">
        
        <EditText
            android:id="@+id/p1"
            android:layout_weight="1"
    	    android:layout_height="match_parent"
    	    android:layout_width="0dp"
    	    android:gravity="center"
    	    android:textColor="@android:color/white" >
    	    
    	    </EditText>
        
    	<TextView
    	    android:layout_weight="1"
    	    android:layout_height="match_parent"
    	    android:layout_width="0dp"
    	    android:gravity="center"
    	    android:textColor="@android:color/white"
    	    android:text="@string/num">
    	</TextView>
    	
    	<EditText
            android:id="@+id/p1"
            android:layout_weight="1"
    	    android:layout_height="match_parent"
    	    android:layout_width="0dp"
    	    android:gravity="center"
    	    android:textColor="@android:color/white" >
    	    
    	    </EditText>
        
    </LinearLayout>
	<LinearLayout 
    	android:orientation="horizontal"
    	android:layout_width="match_parent"   
    	android:layout_height="0dp" 
        android:layout_weight="1">
        
	    <com.realdelsi.dartsscoreboard.CricketView
	        android:id="@+id/p1_15"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="cricketClick"
	        
	        />

	    
    	<TextView
    	    android:layout_weight="1"
    	    android:layout_height="match_parent"
    	    android:layout_width="0dp"
    	    android:gravity="center"
    	    android:textColor="@android:color/white"
    	    android:text="@string/n15">
    	</TextView>
        
    	<com.realdelsi.dartsscoreboard.CricketView
	        android:id="@+id/p2_15"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="cricketClick"
	        />
    	
    </LinearLayout>
	<LinearLayout 
    	android:orientation="horizontal"
    	android:layout_width="match_parent"   
    	android:layout_height="0dp" 
        android:layout_weight="1">
        <com.realdelsi.dartsscoreboard.CricketView
	        android:id="@+id/p1_16"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="cricketClick"
	        />
    	<TextView
    	    android:layout_weight="1"
    	    android:layout_height="match_parent"
    	    android:layout_width="0dp"
    	    android:gravity="center"
    	    android:textColor="@android:color/white"
    	    android:text="@string/n16">
    	</TextView>
        <com.realdelsi.dartsscoreboard.CricketView
	        android:id="@+id/p2_16"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="cricketClick"
	        />
    </LinearLayout>
    
	<LinearLayout 
    	android:orientation="horizontal"
    	android:layout_width="match_parent"   
    	android:layout_height="0dp" 
        android:layout_weight="1">
        <com.realdelsi.dartsscoreboard.CricketView
	        android:id="@+id/p1_17"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="cricketClick"
	        />
    	<TextView
    	    android:layout_weight="1"
    	    android:layout_height="match_parent"
    	    android:layout_width="0dp"
    	    android:gravity="center"
    	    android:textColor="@android:color/white"
    	    android:text="@string/n17">
    	</TextView>
        <com.realdelsi.dartsscoreboard.CricketView
	        android:id="@+id/p2_17"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="cricketClick"
	        />
    </LinearLayout>
	
	<LinearLayout 
    	android:orientation="horizontal"
    	android:layout_width="match_parent"   
    	android:layout_height="0dp" 
        android:layout_weight="1">
        <com.realdelsi.dartsscoreboard.CricketView
	        android:id="@+id/p1_18"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="cricketClick"
	        />
    	<TextView
    	    android:layout_weight="1"
    	    android:layout_height="match_parent"
    	    android:layout_width="0dp"
    	    android:gravity="center"
    	    android:textColor="@android:color/white"
    	    android:text="@string/n18">
    	</TextView>
        <com.realdelsi.dartsscoreboard.CricketView
	        android:id="@+id/p2_18"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="cricketClick"
	        />
    </LinearLayout>
	
	<LinearLayout 
    	android:orientation="horizontal"
    	android:layout_width="match_parent"   
    	android:layout_height="0dp" 
        android:layout_weight="1">
        <com.realdelsi.dartsscoreboard.CricketView
	        android:id="@+id/p1_19"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="cricketClick"
	        />
    	<TextView
    	    android:layout_weight="1"
    	    android:layout_height="match_parent"
    	    android:layout_width="0dp"
    	    android:gravity="center"
    	    android:textColor="@android:color/white"
    	    android:text="@string/n19">
    	</TextView>
        <com.realdelsi.dartsscoreboard.CricketView
	        android:id="@+id/p2_19"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="cricketClick"
	        />
    </LinearLayout>
	
	<LinearLayout 
    	android:orientation="horizontal"
    	android:layout_width="match_parent"   
    	android:layout_height="0dp" 
        android:layout_weight="1">
        <com.realdelsi.dartsscoreboard.CricketView
	        android:id="@+id/p1_20"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="cricketClick"
	        />
    	<TextView
    	    android:layout_weight="1"
    	    android:layout_height="match_parent"
    	    android:layout_width="0dp"
    	    android:gravity="center"
    	    android:textColor="@android:color/white"
    	    android:text="@string/n20">
    	</TextView>
        <com.realdelsi.dartsscoreboard.CricketView
	        android:id="@+id/p2_20"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="cricketClick"
	        />
    </LinearLayout>
	
	<LinearLayout 
    	android:orientation="horizontal"
    	android:layout_width="match_parent"   
    	android:layout_height="0dp" 
        android:layout_weight="1">
        <com.realdelsi.dartsscoreboard.CricketView
	        android:id="@+id/p1_Bull"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="cricketClick"
	        />
    	<TextView
    	    android:layout_weight="1"
    	    android:layout_height="match_parent"
    	    android:layout_width="0dp"
    	    android:gravity="center"
    	    android:textColor="@android:color/white"
    	    android:text="@string/nBull">
    	</TextView>
        <com.realdelsi.dartsscoreboard.CricketView
	        android:id="@+id/p2_Bull"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:onClick="cricketClick"
	        />
    </LinearLayout>
	
	<LinearLayout 
    	android:orientation="horizontal"
    	android:layout_width="match_parent"   
    	android:layout_height="0dp" 
        android:layout_weight="1">
        
	    <TextView
	        android:id="@+id/p1Points"
	        android:layout_weight="1"
	        android:layout_height="match_parent"
	        android:layout_width="0dp"
	        android:textColor="@android:color/white"
	        android:text="@string/p1_points"
	        ></TextView>
	    
    	<TextView
    	    android:layout_weight="1"
    	    android:layout_height="match_parent"
    	    android:layout_width="0dp"
    	    android:gravity="center"
    	    android:textColor="@android:color/white"
    	    android:text="@string/nPoints">
    	</TextView>
        
	    <TextView
	        android:id="@+id/p2Points"
	        android:layout_weight="1"
	        android:layout_height="match_parent"
	        android:layout_width="0dp"
	        android:textColor="@android:color/white"
	        android:text="@string/p2_points"
	        ></TextView>
    </LinearLayout>
	
</LinearLayout>
